import swagger docs in main
